# popcap_pak_extractor

./: CMakeLists.txt  README.md  fake_pak.c  popcap_pak_extractor.c  popcap_pak_extractor.cpp  popcap_pak_extractor_cpp20.cpp
c_version/: popcap_pak_extract.c  popcap_pak_extract.h  ppe.c
